@@ -22,12 +22,12 @@ ruby_add_bdepend "doc? ( >=dev-ruby/hoe-2.12 )"
 ruby_add_bdepend "test? ( >=dev-ruby/hoe-2.12 )"
 
 ruby_add_rdepend "
-	=dev-ruby/dm-core-1.2.1
-	=dev-ruby/dm-aggregates-1.2.0
-	=dev-ruby/dm-constraints-1.2.0
-	=dev-ruby/dm-migrations-1.2.0
-	=dev-ruby/dm-transactions-1.2.0
-	=dev-ruby/dm-serializer-1.2.2
-	=dev-ruby/dm-timestamps-1.2.0
-	=dev-ruby/dm-validations-1.2.0
-	=dev-ruby/dm-types-1.2.2"
+	dev-ruby/dm-core:1.2
+	dev-ruby/dm-aggregates:1.2
+	dev-ruby/dm-constraints:1.2
+	dev-ruby/dm-migrations:1.2
+	dev-ruby/dm-transactions:1.2
+	dev-ruby/dm-serializer:1.2
+	dev-ruby/dm-timestamps:1.2
+	dev-ruby/dm-validations:1.2
+	dev-ruby/dm-types:1.2"
