@@ -2,6 +2,9 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  12 Nov 2013; Peter Wilmott <p@p8952.info> datamapper-1.2.0.ebuild:
+  dm-validations: Use versionator + slots
+
   06 Nov 2013; Peter Wilmott <p@p8952.info> datamapper-1.2.0.ebuild:
   dev-ruby/datamapper: Unset test and doc tasks, add dependency on dev-ruby/hoe
 
